# robot

project_ws/: frames_2025-06-03_00.24.17.gv
project_ws/install/: local_setup.sh  setup.sh
project_ws/install/robot_description/share/robot_description/: package.sh
project_ws/install/robot_description/share/robot_description/config/: ekf.yaml  navigation.yaml  slam_toolbox_mapping.yaml
project_ws/install/robot_description/share/robot_description/launch/: world.launch.py
project_ws/install/robot_description/share/robot_description/meshes/: Link_FR.STL
project_ws/install/robot_exploration/lib/robot_exploration/: autonomous_explorer
project_ws/install/robot_exploration/share/robot_exploration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
project_ws/log/: latest_build
project_ws/src/install/: local_setup.sh  setup.sh
project_ws/src/log/: latest_build
project_ws/src/robot_description/: CMakeLists.txt  frames_2025-06-02_17.57.44.gv  frames_2025-06-02_18.00.25.gv  package.xml
project_ws/src/robot_description/config/: amcl_localization.yaml  bridge.yaml
project_ws/src/robot_description/launch/: mapping.launch.py  navigation.launch.py  navigation_with_slam.launch.py  spawn_robot.launch.py  test.launch.py
project_ws/src/robot_description/meshes/: Link_BR.STL
project_ws/src/robot_description/src/: fake_lidar_pub.cpp  fake_lidar_sub.cpp
project_ws/src/robot_description/urdf/: AutobotGDB.urdf.xacro
project_ws/src/robot_exploration/: package.xml  setup.py
project_ws/src/robot_exploration/launch/: exploration.launch.py
(+23 files in other folders)
